added deleteds check